deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: k-2048
  name: k-2048
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: k-2048
  template:
    metadata:
      labels:
        app: k-2048
    spec:
      containers:
      - image: k-2048:v1
        imagePullPolicy: IfNotPresent
        name: k-2048
        resources:
          limits:
            cpu: 100m
            memory: 50Mi
          requests:
            cpu: 100m
            memory: 50Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
