deploy/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: k-2048
  name: k-2048
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: k-2048
  sessionAffinity: None
  type: NodePort
